@@ -184,7 +184,7 @@ a21c4e4eebeff2daf1f081cd6226f29adfeade7c data\createbigcannons\loot_tables\block
 235661158f753902ef6973695297617954ce8c74 assets\createbigcannons\blockstates\creative_autocannon_ammo_container.json
 9ea4762a05a584971ebbabbe4aed59f2d83cfca5 data\createbigcannons\recipes\melting\melt_cast_iron_ingot.json
 f606cce56a47d59c2633a8aa927664ca33c0fd81 data\createbigcannons\loot_tables\blocks\unbored_bronze_sliding_breech.json
-02c3f1233db8cacdec1205016c6c009fa47ac2f1 assets\createbigcannons\lang\en_us.json
+b88d8134d866696c003137d3f273d698285cab0f assets\createbigcannons\lang\en_us.json
 ed30fb599beda650e7c03f73f81740f575878072 data\createbigcannons\advancements\recipes\createbigcannons\nethersteel_block.json
 dec72a3d3bdf8f0783b06a066ce558fd44a46878 assets\createbigcannons\models\block\unbored_nethersteel_screw_breech.json
 020c4503bc250b1d631c454763e13240290a257a assets\createbigcannons\models\block\unbored_cast_iron_sliding_breech.json
@@ -374,7 +374,7 @@ bc887982390ad450c9924b6b072b793018e89ffd data\createbigcannons\tags\items\gunpow
 5ddd76a06525dbe65e687e40426392fa0ed69c08 assets\createbigcannons\models\block\cannon_cast.json
 2975e49c94758d2f84a1a2019fbe577db1e3d630 assets\createbigcannons\models\item\sliding_breech_cast_mould.json
 0ef027e38fb552bd7a69c22e7bf238c0052b491d assets\createbigcannons\models\block\wrought_iron_drop_mortar_end.json
-47c0748e2071540aecaa696e0461f98873a7db02 assets\createbigcannons\lang\en_ud.json
+009c5adeeac0dd5b18f6ca4057534a80e009eff8 assets\createbigcannons\lang\en_ud.json
 7fa5065e32210f792d1daad2d7268247904f6252 data\minecraft\tags\blocks\mineable\axe.json
 847dd1470953cd5956b5f6edb733cdb0bafddd3c assets\createbigcannons\models\block\incomplete_bronze_autocannon_recoil_spring.json
 236281fc879d0281e93d7a9b4f7fadfbed3c31b7 data\createbigcannons\recipes\wrought_iron_cannon_end.json
