@@ -389,7 +389,7 @@
   "createbigcannons.ponder.munitions/cannon_loads.text_11": "\u02D9\u02D9\u02D9s\u01DDb\u0279\u0250\u0265\u0186 \u0279\u01DDp\u028Do\u0500 \u028Eu\u0250\u026F oo\u0287 bu\u0131p\u0250o\u05DF\u02D9\u02D9\u02D9",
   "createbigcannons.ponder.munitions/cannon_loads.text_12": "\u02D9\u02D9\u02D9\u05DF\u01DD\u0279\u0279\u0250q \u01DD\u0265\u0287 u\u0131 \u0287\u0254\u01DD\u0638qo \u0279\u01DD\u0265\u0287ou\u0250 \u0265\u0287\u0131\u028D \u01DDp\u0131\u05DF\u05DFo\u0254 o\u0287 \u01DD\u05DF\u0131\u0287\u0254\u01DD\u0638o\u0279d p\u01DD\u0279\u0131\u025F \u0250 bu\u0131\u028Do\u05DF\u05DF\u0250\u02D9\u02D9\u02D9",
   "createbigcannons.ponder.munitions/cannon_loads.text_13": "\u02D9\u0287u\u01DD\u026Fuo\u0279\u0131\u028Cu\u01DD bu\u0131puno\u0279\u0279ns \u01DD\u0265\u0287 o\u0287 \u0287\u0250\u01DD\u0279\u0265\u0287 \u0279o\u0638\u0250\u026F \u0250 \u01DDsod pu\u0250 \u01DD\u0279n\u05DF\u0131\u0250\u025F \u0254\u0131\u0265do\u0279\u0287s\u0250\u0287\u0250\u0254 \u01DDsn\u0250\u0254 u\u0250\u0254\u02D9\u02D9\u02D9",
-  "createbigcannons.ponder.munitions/cannon_loads.text_2": "\u02D9\u0265\u0287bu\u01DD\u0279\u0287s s\u0287\u0131 pu\u0250 \u0279o\u0287\u0254\u0250\u025F u\u0131\u0250\u026F s\u0287\u0131 \u061B\u05DF\u0131\u0250\u025F o\u0287 uouu\u0250\u0254 \u01DD\u0265\u0287 \u01DDsn\u0250\u0254 u\u0250\u0254 \u0287\u0250\u0265\u0287 s\u0279o\u0287\u0254\u0250\u025F u\u0131\u0250\u026F o\u028D\u0287 s\u0250\u0265 \u05DF\u0250\u0131\u0279\u01DD\u0287\u0250\u026F s,uouu\u0250\u0254 \u2C6F",
+  "createbigcannons.ponder.munitions/cannon_loads.text_2": "\u02D9\u0265\u0287bu\u01DD\u0279\u0287s s\u0287\u0131 pu\u0250 \u05DF\u01DD\u0279\u0279\u0250q \u0279\u01DDd \u028E\u0287\u0131\u0254o\u05DF\u01DD\u028C \u01DD\u05DF\u0131\u0287\u0254\u01DD\u0638o\u0279d \u026Fn\u026F\u0131u\u0131\u026F s\u0287\u0131 \u061B\u05DF\u0131\u0250\u025F o\u0287 uouu\u0250\u0254 \u01DD\u0265\u0287 \u01DDsn\u0250\u0254 u\u0250\u0254 \u0287\u0250\u0265\u0287 s\u0279o\u0287\u0254\u0250\u025F u\u0131\u0250\u026F o\u028D\u0287 s\u0250\u0265 \u05DF\u0250\u0131\u0279\u01DD\u0287\u0250\u026F s,uouu\u0250\u0254 \u2C6F",
   "createbigcannons.ponder.munitions/cannon_loads.text_3": "\u02D9uouu\u0250\u0254 \u0250 u\u0131 \u029E\u0254n\u0287s \u0287\u01DDb \u0287ou o\u0287 \u01DD\u028C\u0250\u0265 p\u05DFno\u0265s \u01DD\u05DF\u0131\u0287\u0254\u01DD\u0638o\u0279d \u0250 \u0279\u01DD\u028Dod \u0265\u0254n\u026F \u028Do\u0265 s\u01DDu\u0131\u026F\u0279\u01DD\u0287\u01DDp \u05DF\u01DD\u0279\u0279\u0250q \u0279\u01DDd \u028E\u0287\u0131\u0254o\u05DF\u01DD\u028C \u01DD\u05DF\u0131\u0287\u0254\u01DD\u0638o\u0279d \u026Fn\u026F\u0131u\u0131\u026F \u01DD\u0265\u27D8",
   "createbigcannons.ponder.munitions/cannon_loads.text_4": "\u02D9\u05DF\u01DD\u0279\u0279\u0250q \u028E\u0279\u01DD\u028C\u01DD \u0279o\u025F \u01DDb\u0279\u0250\u0265\u0186 \u0279\u01DDp\u028Do\u0500 \u0196 o\u0287 \u0287u\u01DD\u05DF\u0250\u028C\u0131nb\u01DD s\u0131 uo\u0279\u0131 \u0287s\u0250\u0254 \u025Fo \u028E\u0287\u0131\u0254o\u05DF\u01DD\u028C \u01DD\u05DF\u0131\u0287\u0254\u01DD\u0638o\u0279d \u026Fn\u026F\u0131u\u0131\u026F \u0287\u05DFn\u0250\u025F\u01DDp \u01DD\u0265\u0287 '\u01DD\u05DFd\u026F\u0250x\u01DD \u0279o\u2132",
   "createbigcannons.ponder.munitions/cannon_loads.text_5": "\u02D9p\u01DD\u05DF\u05DF\u01DD\u028C\u0250\u0279\u0287 s\u05DF\u01DD\u0279\u0279\u0250q \u01DD\u0265\u0287 sp\u0279\u0250\u028Do\u0287 p\u01DD\u0287uno\u0254 os\u05DF\u0250 s\u0131 u\u0131 s\u0131 \u01DD\u05DF\u0131\u0287\u0254\u01DD\u0638o\u0279d p\u01DDp\u0250o\u05DF \u01DD\u0265\u0287 \u0287\u0250\u0265\u0287 \u05DF\u01DD\u0279\u0279\u0250q \u01DD\u0265\u27D8",
