@@ -133,8 +133,8 @@ c58a162ab33e2d4841b7ccde59fa022506ef5dcc assets/createbigcannons/blockstates/ver
 8cc31b88cd6093baa4caddb02ff7f7ff793299f4 assets/createbigcannons/blockstates/wrought_iron_cannon_end.json
 303668cdb3754018ca137ea6074801c6927d3987 assets/createbigcannons/blockstates/wrought_iron_drop_mortar_end.json
 d942040026b2849ca2153a9933e8dc0c5c39f3c9 assets/createbigcannons/blockstates/yaw_controller.json
-47c0748e2071540aecaa696e0461f98873a7db02 assets/createbigcannons/lang/en_ud.json
-02c3f1233db8cacdec1205016c6c009fa47ac2f1 assets/createbigcannons/lang/en_us.json
+009c5adeeac0dd5b18f6ca4057534a80e009eff8 assets/createbigcannons/lang/en_ud.json
+b88d8134d866696c003137d3f273d698285cab0f assets/createbigcannons/lang/en_us.json
 c6129d8380bcb26579fc200fc054f4a485ad9b2a assets/createbigcannons/models/block/ap_shell.json
 14e7b948a05007b8c96e35f92f0bff66427de7b8 assets/createbigcannons/models/block/ap_shot.json
 7157cc923bd4f217cb47117fbfe2b9542e367d17 assets/createbigcannons/models/block/autocannon/bronze_autocannon_spring.json
